@@ -1,3 +1,1 @@
-kylin-nm-dbgsym_3.0.1-1kylin59_amd64.ddeb debug optional automatic=yes
-kylin-nm_3.0.1-1kylin59_amd64.buildinfo utils optional
-kylin-nm_3.0.1-1kylin59_amd64.deb utils optional
+kylin-nm_3.0.1-1kylin60_source.buildinfo utils optional
